Fixed bug where loading page sometimes made invisible MathJax popups block input fields

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ tr:hover .timer-hidden {
 /* arrow points UP */
 .MJpopup-bottom {
 	z-index: 999;
-	display: inline-block;
+	display: none; /* inline-block */
 	position: absolute;
 	top: 40px;
 	transform: translateX(0%);
@@ -122,7 +122,7 @@ tr:hover .timer-hidden {
 /* the popup thingy to the side */
 /* arrow points RIGHT */
 .MJpopup {
-	display: inline-block;
+	display: none; /* inline-block */
 	position: absolute;
 	z-index: 3;
 	top: 50%;
@@ -269,6 +269,7 @@ input.codeshard {
 }
 .codeshard-hidden {
 	display: none;
+	overflow: visible;
 }
 
 
